Closed Bug 353159 Opened 18 years ago Closed 18 years ago

upload control fails to update filename/mediatype if bound to attribute

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sspeiche, Assigned: sspeiche)

References

Details

(Keywords: fixed1.8.0.8, fixed1.8.1.1)

Attachments

(2 files, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060816 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060816 Minefield/3.0a1

When an upload control is bound to an attribute, the elements filename and mediatype don't work (i.e. the associated instance node value are not updated).

This is fails since the qi on nsIContent fails in nsXFormsUploadElement::SetFile()
  nsCOMPtr<nsIContent> content = do_QueryInterface(mBoundNode);
  

Reproducible: Always

Steps to Reproduce:
\
Attached file test case
Mark as blocking 0.7 release.  This is causing a proof of concept of mine to not work well as the instances' use attributes and is controlled by a standards organization that can easily change it.
Blocks: 344603
me and my fat fingers
Blocks: 334603
No longer blocks: 344603
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #239190 - Flags: review?(doronr)
Attachment #239190 - Attachment mime type: application/xhtml+xml → text/plain
Attachment #239190 - Attachment is patch: true
Assignee: xforms → sspeiche
Attachment #239190 - Flags: review?(doronr) → review+
Attachment #239190 - Flags: review?(aaronr)
Comment on attachment 239190 [details] [diff] [review]
patch (if they could all be this easy)

nit: change content to node or something even more descriptive, please

r=me
Attachment #239190 - Flags: review?(aaronr) → review+
aaronr, checkin please?
Attachment #239190 - Attachment is obsolete: true
checked into trunk for sspeiche
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Steve, please open a new bug to re-do this patch so that it can work on the branches (might as well keep the code common between trunk and branches if at all possible).  nsINode doesn't exist in the branches (came into being in early 2006).  Thanks.
checked into 1.8.0 on 2006/09/27
Keywords: fixed1.8.0.8
checked into 1.8 branch on 2006/11/21
Keywords: fixed1.8.1.1
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: