[XForms] upload control fails to update info if bound to an attribute. Bug 353159, patch by sspeiche, r=doronr+aaronr